--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading"></h1>
+  <h1 class="page-heading">Start here page</h1>
   <p>Don't forget to bookmark this page! Starting on this page will let us remove the session from analytics, so that we know who's actually coming to the site</p>
 
   <!--2 columns for EN and FR--> <div
