--- a/admin.html
+++ b/admin.html
@@ -49,6 +49,11 @@ layout: default
         chum goes here
       </div>
     </div>
+    <div class="col-xs-6 col-sm-4" box-shadow: 10px 10px 5px #888888;>
+      <div class="well">
+        chum goes here
+      </div>
+    </div>
   </div>
   
   
