--- a/admin.html
+++ b/admin.html
@@ -51,7 +51,10 @@ layout: default
     </div>
     <div class="col-xs-6 col-sm-4" box-shadow: 10px 10px 5px #888888;>
       <div class="well">
-        chum goes here
+        <a href="http://www.agr.gc.ca/eng/science-and-innovation/agricultural-practices/water/watershed-protection/agriculture-and-water-quality/best-management-practices-featuring-robocow/?id=1187368724250" rel="external" data-ga="&amp;promo1cr=Featured%20Items&amp;promo1nm=Gallery%20of%20mobile%20and%20web-based%20applications&amp;promo1ps=1&amp;el=Gallery%20of%20mobile%20and%20web-based%20applications">
+           <h3 class="h5">Mooo!</h3>
+           <img src="/images/robocow.png" alt="Robocow" class="img-responsive thumbnail mrgn-bttm-sm">
+        </a>
       </div>
     </div>
   </div>
