--- a/admin.html
+++ b/admin.html
@@ -41,18 +41,24 @@ layout: default
   <div class="row">
     <div class="col-xs-6 col-sm-4" box-shadow: 10px 10px 5px #888888;>
       <div class="well">
-        chum goes here
+        <a href="https://www.canada.ca/en/services/business/start.html" rel="external">
+          <h3 class="h5">You won't believe this simple trick that makes Canadians rich</h3>
+          <img src="/images/calculator.jpg" alt="Calculator" class="img-responsive thumbnail mrgn-bttm-sm">
+        </a>
       </div>
     </div>
     <div class="col-xs-6 col-sm-4" box-shadow: 10px 10px 5px #888888;>
       <div class="well">
-        chum goes here
+        <a href="www.canada.ca" rel="external">
+           <h3 class="h5">You won't believe what she looks like now</h3>
+           <img src="/images/canadacahome.png" alt="Homepage" class="img-responsive thumbnail mrgn-bttm-sm">
+        </a>
       </div>
     </div>
     <div class="col-xs-6 col-sm-4" box-shadow: 10px 10px 5px #888888;>
       <div class="well">
-        <a href="http://www.agr.gc.ca/eng/science-and-innovation/agricultural-practices/water/watershed-protection/agriculture-and-water-quality/best-management-practices-featuring-robocow/?id=1187368724250" rel="external" data-ga="&amp;promo1cr=Featured%20Items&amp;promo1nm=Gallery%20of%20mobile%20and%20web-based%20applications&amp;promo1ps=1&amp;el=Gallery%20of%20mobile%20and%20web-based%20applications">
-           <h3 class="h5">Mooo!</h3>
+        <a href="http://www.agr.gc.ca/eng/science-and-innovation/agricultural-practices/water/watershed-protection/agriculture-and-water-quality/best-management-practices-featuring-robocow/?id=1187368724250" rel="external">
+           <h3 class="h5">Mooo</h3>
            <img src="/images/robocow.png" alt="Robocow" class="img-responsive thumbnail mrgn-bttm-sm">
         </a>
       </div>
