--- a/admin.html
+++ b/admin.html
@@ -38,7 +38,7 @@ layout: default
   
   <!--embed analytics dashboard?-->
   
-  <div class="row">
+ <!-- <div class="row">
     <div class="col-xs-6 col-sm-4" box-shadow: 10px 10px 5px #888888;>
       <div class="well">
         <a href="https://www.canada.ca/en/services/business/start.html" rel="external">
@@ -63,7 +63,7 @@ layout: default
         </a>
       </div>
     </div>
-  </div>
+  </div>-->
   
   
 
