--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,59 @@ ref: index
 lang: en
 ---
 
+<aside class="prm-flpr">
+<div class="container">
+<div class="row">
+<h2 class="wb-inv">Promotions</h2>
+<div class="wb-tabs carousel-s2 show-thumbs playing slow">
+<ul role="tablist">
+<li class="active">
+<a href="#tab1"><img src="./img/promos/1170x347-1.png" alt=""><span class="wb-inv">Tab 1: Banff National Park</span></a>
+</li>
+<li>
+<a href="#tab2"><img src="./img/promos/1170x347-2.png" alt=""><span class="wb-inv">Tab 2: Algonquin Provincial Park</span></a>
+</li>
+<li>
+<a href="#tab3"><img src="./img/promos/1170x347-3.png" alt=""><span class="wb-inv">Tab 3: Rideau Canal</span></a>
+</li>
+</ul>
+<div class="tabpanels">
+<div role="tabpanel" id="tab1" class="in fade">
+<a href="#" class="learnmore">
+<figure>
+<img src="./img/promos/1170x347-1.png" alt="">
+<figcaption>
+<p>Banff National Park </p>
+</figcaption>
+</figure>
+</a>
+</div>
+<div role="tabpanel" id="tab2" class="out fade">
+<a href="#" class="learnmore">
+<figure>
+<img src="./img/promos/1170x347-2.png" alt="">
+<figcaption>
+<p>Algonquin Provincial Park </p>
+</figcaption>
+</figure>
+</a>
+</div>
+<div role="tabpanel" id="tab3" class="out fade">
+<a href="#" class="learnmore">
+<figure>
+<img src="./img/promos/1170x347-3.png" alt="">
+<figcaption>
+<p>Rideau Canal </p>
+</figcaption>
+</figure>
+</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</aside>
+
 <div class="home">
 
   <h1 class="page-heading">Canada.ca blog</h1>
