--- a/index2.html
+++ b/index2.html
@@ -3,21 +3,19 @@ layout: default
 ref: index
 lang: en
 ---
+<div class="col-md-12">
+<img src="./img/1170x200.png" alt="" class="img-responsive thumbnail">
+</div>
+
 
 <aside class="prm-flpr">
 <div class="container">
 <div class="row">
-<h2 class="wb-inv">Promotions</h2>
+<h2 class="wb-inv">Canada.ca Blog</h2>
 <div class="wb-tabs carousel-s2 show-thumbs playing slow">
 <ul role="tablist">
-<li class="active">
-<a href="#tab1"><img src="./img/promos/1170x347-1.png" alt=""><span class="wb-inv">Tab 1: Banff National Park</span></a>
-</li>
 <li>
-<a href="#tab2"><img src="./img/promos/1170x347-2.png" alt=""><span class="wb-inv">Tab 2: Algonquin Provincial Park</span></a>
-</li>
-<li>
-<a href="#tab3"><img src="./img/promos/1170x347-3.png" alt=""><span class="wb-inv">Tab 3: Rideau Canal</span></a>
+<a href="#tab3"><img src="./img/promos/1170x347-3.png" alt=""><span class="wb-inv">Canada.ca</span></a>
 </li>
 </ul>
 <div class="tabpanels">
