--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@ ref: index
 lang: en
 ---
 <div class="col-md-12">
-<img src="./img/1170x200.png" alt="" class="img-responsive thumbnail">
+<img src="./images/1170x200.png" alt="" class="img-responsive thumbnail">
 </div>
 
 
