--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@ lang: en
 </div>
 
 
-<aside class="prm-flpr">
+<!-- <aside class="prm-flpr">
 <div class="container">
 <div class="row">
 <h2 class="wb-inv">Canada.ca Blog</h2>
@@ -53,7 +53,7 @@ lang: en
 </div>
 </div>
 </div>
-</aside>
+</aside> -->
 
 <div class="home">
 
