--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@ layout: default
 ref: index
 lang: en
 ---
-<div class="col-md-12">
+<div class="container">
 <img src="./images/1170x200.png" alt="" class="img-responsive thumbnail">
 </div>
 
