--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,11 @@ layout: default
 ref: index
 lang: en
 ---
-<div class="container">
-<img src="./images/1170x200.png" alt="" class="img-responsive thumbnail">
-</div>
+<aside class="prm-flpr">
+   <div class="container">
+    <img src="./images/1170x200.png" alt="" class="img-responsive thumbnail">
+  </div>
+</aside>
 
 
 <!-- <aside class="prm-flpr">
