--- a/index2.html
+++ b/index2.html
@@ -3,59 +3,27 @@ layout: default
 ref: index
 lang: en
 ---
-<aside class="prm-flpr">
+<!-- <aside class="prm-flpr">
    <div class="container">
     <img src="./images/1170x200.png" alt="" class="img-responsive thumbnail">
   </div>
-</aside>
+</aside> -->
 
 
-<!-- <aside class="prm-flpr">
+<aside class="prm-flpr">
 <div class="container">
 <div class="row">
 <h2 class="wb-inv">Canada.ca Blog</h2>
 <div class="wb-tabs carousel-s2 show-thumbs playing slow">
 <ul role="tablist">
 <li>
-<a href="#tab3"><img src="./img/promos/1170x347-3.png" alt=""><span class="wb-inv">Canada.ca</span></a>
+<a href="#tab3"><img src="./images/1170x200.png" alt=""><span class="wb-inv">Canada.ca</span></a>
 </li>
 </ul>
-<div class="tabpanels">
-<div role="tabpanel" id="tab1" class="in fade">
-<a href="#" class="learnmore">
-<figure>
-<img src="./img/promos/1170x347-1.png" alt="">
-<figcaption>
-<p>Banff National Park </p>
-</figcaption>
-</figure>
-</a>
-</div>
-<div role="tabpanel" id="tab2" class="out fade">
-<a href="#" class="learnmore">
-<figure>
-<img src="./img/promos/1170x347-2.png" alt="">
-<figcaption>
-<p>Algonquin Provincial Park </p>
-</figcaption>
-</figure>
-</a>
-</div>
-<div role="tabpanel" id="tab3" class="out fade">
-<a href="#" class="learnmore">
-<figure>
-<img src="./img/promos/1170x347-3.png" alt="">
-<figcaption>
-<p>Rideau Canal </p>
-</figcaption>
-</figure>
-</a>
 </div>
 </div>
 </div>
-</div>
-</div>
-</aside> -->
+</aside>
 
 <div class="home">
 
