--- a/index2.html
+++ b/index2.html
@@ -15,11 +15,11 @@ lang: en
 <div class="row">
 <h2 class="wb-inv">Canada.ca Blog</h2>
 <div class="wb-tabs carousel-s2 show-thumbs playing slow">
-<ul role="tablist">
+
 <li>
-<a href="#tab3"><img src="./images/1170x200.png" alt=""><span class="wb-inv">Canada.ca</span></a>
+<img src="./images/1170x200.png" alt=""><span class="wb-inv">Canada.ca</span></a>
 </li>
-</ul>
+
 </div>
 </div>
 </div>
