--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@ lang: en
 <div class="container">
 <div class="row">
 <h2 class="wb-inv">Canada.ca Blog</h2>
-<div class="wb-tabs carousel-s2 show-thumbs playing slow">
+<div>
 
 <li>
 <img src="./images/1170x200.png" alt=""><span class="wb-inv">Canada.ca</span></a>
