--- a/index2.html
+++ b/index2.html
@@ -3,11 +3,7 @@ layout: default
 ref: index
 lang: en
 ---
-<!-- <aside class="prm-flpr">
-   <div class="container">
-    <img src="./images/1170x200.png" alt="" class="img-responsive thumbnail">
-  </div>
-</aside> -->
+
 
 
 <aside class="prm-flpr">
@@ -16,6 +12,7 @@ lang: en
 <h2 class="wb-inv">Canada.ca Blog</h2>
 <div>
 <img src="./images/1170x200.png" alt=""><span class="wb-inv">Canada.ca</span></a>
+   <h2> Canada.ca Blog </h2> <h4> Stories and insights from the Canada.ca design team. </h4>
 </div>
 </div>
 </div>
