--- a/index2.html
+++ b/index2.html
@@ -3,16 +3,20 @@ layout: default
 ref: index
 lang: en
 ---
-
-
+<style>
+   
+   h6 {
+      position: absolute;
+   }
+</style>
 
 <aside class="prm-flpr">
 <div class="container">
 <div class="row">
 <h2 class="wb-inv">Canada.ca Blog</h2>
-<div>
+<div class="blog">
 <img src="./images/1170x200.png" alt=""><span class="wb-inv">Canada.ca</span></a>
-   <h2> Canada.ca Blog </h2> <h4> Stories and insights from the Canada.ca design team. </h4>
+   <h6> Canada.ca Blog </h2> <h7> Stories and insights from the Canada.ca design team. </h4>
 </div>
 </div>
 </div>
