--- a/index2.html
+++ b/index2.html
@@ -15,8 +15,8 @@ lang: en
 <div class="row">
 <h2 class="wb-inv">Canada.ca Blog</h2>
 <div class="blog">
-<img src="./images/1170x200.png" alt=""><span class="wb-inv">Canada.ca</span></a>
-   <h6> Canada.ca Blog </h2> <h7> Stories and insights from the Canada.ca design team. </h4>
+<img src="./images/1170x200.png" alt="" />
+   <h6> Canada.ca Blog </h6> <h7> Stories and insights from the Canada.ca design team. </h7>
 </div>
 </div>
 </div>
