--- a/index2.html
+++ b/index2.html
@@ -5,9 +5,19 @@ lang: en
 ---
 <style>
    
+   .blog {
+      position: relative;
+      width: 100%;
+      
+   }
+   
    h6 {
       position: absolute;
+      top: 200px;
+      left: 0;
+      width: 100%;
    }
+   
 </style>
 
 <aside class="prm-flpr">
