--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@ lang: en
 <style>
    
    .blog {
-      position: relative;
+      position: relative !important;
       width: 100%;
       
    }
