--- a/index2.html
+++ b/index2.html
@@ -6,13 +6,13 @@ lang: en
 <style>
    
    .blog {
-      position: relative !important;
+      position: absolute !important;
       width: 100%;
       
    }
    
    h6 {
-      position: absolute;
+      position: relative;
       top: 200px;
       left: 0;
       width: 100%;
