--- a/index2.html
+++ b/index2.html
@@ -6,13 +6,12 @@ lang: en
 <style>
    
    .blog {
-      position: absolute !important;
-      width: 100%;
+      position: relative;
       
    }
    
    h6 {
-      position: relative;
+      position: absolute;
       top: 200px;
       left: 0;
       width: 100%;
@@ -20,11 +19,11 @@ lang: en
    
 </style>
 
-<aside class="prm-flpr">
+<aside class="prm-flpr blog">
 <div class="container">
 <div class="row">
 <h2 class="wb-inv">Canada.ca Blog</h2>
-<div class="blog">
+<div>
 <img src="./images/1170x200.png" alt="" />
    <h6> Canada.ca Blog </h6>
 </div>
