--- a/index2.html
+++ b/index2.html
@@ -19,9 +19,9 @@ lang: en
    
 </style>
 
-<aside class="prm-flpr blog">
+<aside class="prm-flpr">
 <div class="container">
-<div class="row">
+<div class="row blog">
 <h2 class="wb-inv">Canada.ca Blog</h2>
 <div>
 <img src="./images/1170x200.png" alt="" />
