--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,19 @@ lang: en
 ---
 <style>
    
-   .blog {
+   figure {
       position: relative;
+      
+   }
+   
+   figcaption {
+    position: absolute;
+    bottom: 10%;
+     width: 501px;
+      margin: 0;
+      font-weight: bold;
+      line-height: 200%;
+      text-transform: capitalize;
       
    }
    
@@ -21,15 +32,20 @@ lang: en
 
 <aside class="prm-flpr">
 <div class="container">
-<div class="row blog">
+<div class="row">
 <h2 class="wb-inv">Canada.ca Blog</h2>
-<div>
-<img src="./images/1170x200.png" alt="" />
-   <h6> Canada.ca Blog </h6>
-</div>
+	<figure>
+		<img src="./images/1170x200.png" alt="" />
+			<figcaption>
+				<span>
+					<h6> Canada.ca Blog </h6>
+				</span>
+			</figcaption>
+	</figure>
 </div>
 </div>
 </aside>
+
 
 <div class="home">
 
