--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,13 @@ lang: en
       font-weight: bold;
       line-height: 200%;
       text-transform: capitalize;
+	   
+	    span {
+    color: white;
+    background: black; /* fallback */
+    background: rgba(0, 0, 0, 0.7);
+    padding: .5em;
+	   }
       
    }
    
