--- a/index2.html
+++ b/index2.html
@@ -215,10 +215,6 @@
 
 
 
-</aside>
-
-
-
 <div class="home">
 
   <h1 class="page-heading">Newest Articles</h1>
@@ -250,6 +246,8 @@
     </section>
 </div>
 </div>
+
+</main>
 
 
 <aside class="gc-nttvs container">
