--- a/indexjk.html
+++ b/indexjk.html
@@ -91,10 +91,6 @@ lang: en
 
 
 
-</aside>
-
-
-
 <div class="home">
 
   <h1 class="page-heading">Newest Articles</h1>
@@ -126,7 +122,8 @@ lang: en
     </section>
 </div>
 </div>
-</div>
+
+</main>
 
 
 
