--- a/index2.html
+++ b/index2.html
@@ -211,9 +211,17 @@
         </div>
     </aside>
 
+
+
+<!---------
+////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////
+ARTICLES GO BELOW
+////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////
+------------->
+
 <main role="main" property="mainContentOfPage" class="container">
-
-
 
 <div class="home">
 
@@ -234,17 +242,22 @@
 </section>
 
 
+<!---------
+////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////
+------------->
+
 <div class="row">
-<div class="col-sm-8">
-    <section class="followus">
-      <h2>Subscribe</h2>
-      <ul class="list-inline mrgn-tp-lg">
-        <li>
-          <a href="/rss/city/on-118_e.xml"><img src="./images/feed-icon-14x14.png" alt="RSS" class="mrgn-rght-sm">via RSS</a>
-        </li>
-      </ul>
-    </section>
-</div>
+	<div class="col-sm-8">
+		<section class="followus">
+		<h2>Subscribe</h2>
+		<ul class="list-inline mrgn-tp-lg">
+			<li>
+			<a href="/rss/city/on-118_e.xml"><img src="./images/feed-icon-14x14.png" alt="RSS" class="mrgn-rght-sm">via RSS</a>
+			</li>
+		</ul>
+		</section>
+	</div>
 </div>
 
 </main>
