--- a/indexjk.html
+++ b/indexjk.html
@@ -36,8 +36,8 @@ lang: en
   </ul>
 </section> -->
   
-<section class="col-md-6">
-<ul>
+<section>
+<ul class="col-md-6">
     {% assign posts=site.posts | where:"lang", page.lang %}
     {% for post in posts %}
       <li>
