--- a/index3.html
+++ b/index3.html
@@ -229,18 +229,23 @@ ARTICLES GO BELOW
   <h1 class="page-heading">Newest Articles</h1>
   
   <section class="col-md-6">
-<a href="#">
-<h3 class="h5">Helping Canadians start a business</h3></a><small>[2017-08-15]</small><p></p>
-<img src="./images/08-15.png" alt="" class="img-responsive thumbnail">
+
+<h2>Helping Canadians start a business</h2>
+<a href="#"><img src="./images/08-15.png" alt="" class="img-responsive thumbnail">
+<h3 class="h5">Helping Canadians start a business</h3></a>
+<small>[2017-08-15]</small>
+<p>If there's a bunch of intro text to go here, we should be able to pull it in with some script from jekyll/liquid...</p>
 
 
 </section>
 
 <section class="col-md-6">
-<a href="#">
-<h3 class="h5">Taking steps to new design patterns</h3></a><small>[2017-08-09]</small><p></p>
 
-<img src="./images/08-09.png" alt="" class="img-responsive thumbnail">
+<h2>Taking steps to new design patterns</h2>
+<a href="#"><img src="./images/08-09.png" alt="" class="img-responsive thumbnail">
+<h3 class="h5">Taking steps to new design patterns</h3></a>
+<small>[2017-08-09]</small>
+<p>If there's a bunch of intro text to go here, we should be able to pull it in with some script from jekyll/liquid...</p>
 
 </section>
 
