--- a/index3.html
+++ b/index3.html
@@ -230,22 +230,20 @@ ARTICLES GO BELOW
   
   <section class="col-md-6">
 
-<h2>Helping Canadians start a business</h2>
+<h2>Article Simple Title</h2>
 <a href="#"><img src="./images/08-15.png" alt="" class="img-responsive thumbnail">
 <h3 class="h5">Helping Canadians start a business</h3></a>
-<small>[2017-08-15]</small>
-<p>If there's a bunch of intro text to go here, we should be able to pull it in with some script from jekyll/liquid...</p>
+<p><small>[2017-08-15]</small> - We can have a bunch of intro text to go here that we control, we should be able to pull it in with some script from jekyll/liquid.</p>
 
 
 </section>
 
 <section class="col-md-6">
 
-<h2>Taking steps to new design patterns</h2>
+<h2>Article Simple Title</h2>
 <a href="#"><img src="./images/08-09.png" alt="" class="img-responsive thumbnail">
 <h3 class="h5">Taking steps to new design patterns</h3></a>
-<small>[2017-08-09]</small>
-<p>If there's a bunch of intro text to go here, we should be able to pull it in with some script from jekyll/liquid...</p>
+<p><small>[2017-08-09]</small> - We can have a bunch of intro text to go here that we control, we should be able to pull it in with some script from jekyll/liquid.</p>
 
 </section>
 
@@ -288,6 +286,8 @@ ARTICLES GO BELOW
            </div>
         </div>
     </aside>
+	
+</main>
 
 
 <main role="main" property="mainContentOfPage" class="container">
@@ -343,7 +343,7 @@ ARTICLES GO BELOW
            </div>
         </div>
     </aside>
-
+</main>
 
 <main role="main" property="mainContentOfPage" class="container">
 
@@ -352,37 +352,23 @@ ARTICLES GO BELOW
   <h1 class="page-heading">Newest Articles</h1>
   
 <section class="col-md-6">
+<h3>Helping Canadians start a business</h3>
 <a href="#">
-<h3>Helping Canadians start a business</h3><small>[2017-08-15]</small><p></p>
+<small>[2017-08-15]</small><p></p>
 <img src="./images/08-15.png" alt="" class="img-responsive thumbnail"></a>
 
 
 </section>
 
 <section class="col-md-6">
+<h3>Taking steps to new design patterns</h3>
 <a href="#">
-<h3>Taking steps to new design patterns</h3><small>[2017-08-09]</small><p></p>
+<small>[2017-08-09]</small><p></p>
 
 <img src="./images/08-09.png" alt="" class="img-responsive thumbnail"></a>
 
 </section>
 
-
-<section class="col-md-6">
-<a href="#">
-<h3>Helping Canadians start a business</h3><small>[2017-08-15]</small><p></p>
-<img src="./images/08-15.png" alt="" class="img-responsive thumbnail"></a>
-
-
-</section>
-
-<section class="col-md-6">
-<a href="#">
-<h3>Taking steps to new design patterns</h3><small>[2017-08-09]</small><p></p>
-
-<img src="./images/08-09.png" alt="" class="img-responsive thumbnail"></a>
-
-</section>
 
 
 <div class="row">
