--- a/index3.html
+++ b/index3.html
@@ -230,22 +230,24 @@ ARTICLES GO BELOW
   
   <section class="col-md-6">
 
-<h2>Article Simple Title</h2>
+<h2>Starting a Business</h2>
 <a href="#"><img src="./images/08-15.png" alt="" class="img-responsive thumbnail">
 <h3 class="h5">Helping Canadians start a business</h3></a>
-<p><small>[2017-08-15]</small> - We can have a bunch of intro text to go here that we control, we should be able to pull it in with some script from jekyll/liquid.</p>
+<p><small>[2017-08-15]</small> - Starting a business is a top task for Canadians and it’s not an easy one. We held a series of design sprints, testing design prototypes with Canadians.</p>
 
 
 </section>
 
 <section class="col-md-6">
 
-<h2>Article Simple Title</h2>
+<h2>Design Patterns</h2>
 <a href="#"><img src="./images/08-09.png" alt="" class="img-responsive thumbnail">
 <h3 class="h5">Taking steps to new design patterns</h3></a>
-<p><small>[2017-08-09]</small> - We can have a bunch of intro text to go here that we control, we should be able to pull it in with some script from jekyll/liquid.</p>
+<p><small>[2017-08-09]</small> - One of the key aspects of the Canada.ca design is a consistent template for topic pages to help citizens find and start their tasks.</p>
 
 </section>
+
+
 
 <div class="row">
 	<div class="col-sm-8">
