--- a/index3.html
+++ b/index3.html
@@ -230,9 +230,9 @@ ARTICLES GO BELOW
   
 <section class="col-md-6">
 
-<h2>Starting a Business</h2>
-<a href="#"><img src="./images/08-15.png" alt="" class="img-responsive thumbnail">
-<h3 class="h5">Helping Canadians start a business</h3></a>
+<a href="#"><h2>Helping Canadians start a business</h2>
+<img src="./images/08-15.png" alt="" class="img-responsive thumbnail">
+</a>
 <p><small>[2017-08-15]</small> - Starting a business is a top task for Canadians and it’s not an easy one.</p>
 
 
@@ -240,18 +240,18 @@ ARTICLES GO BELOW
 
 <section class="col-md-6">
 
-<h2>Design Patterns</h2>
-<a href="#"><img src="./images/08-09.png" alt="" class="img-responsive thumbnail">
-<h3 class="h5">Taking steps to new design patterns</h3></a>
+<a href="#"><h2>Taking steps to new design patterns</h2>
+<img src="./images/08-09.png" alt="" class="img-responsive thumbnail">
+</a>
 <p><small>[2017-08-09]</small> - One of the key aspects of the Canada.ca design is a consistent template for topic pages to help citizens find and start their tasks.</p>
 
 </section>
 
 <section class="col-md-6">
 
-<h2>Lorem Ipsum</h2>
-<a href="#"><img src="./images/08-15.png" alt="" class="img-responsive thumbnail">
-<h3 class="h5">Helping Canadians start a business</h3></a>
+<a href="#"><h2>Helping Canadians start a business</h2>
+<img src="./images/08-15.png" alt="" class="img-responsive thumbnail">
+</a>
 <p><small>[2017-08-15]</small> - Starting a business is a top task for Canadians and it’s not an easy one. </p>
 
 
@@ -259,9 +259,9 @@ ARTICLES GO BELOW
 
 <section class="col-md-6">
 
-<h2>Lorem Ipsum</h2>
-<a href="#"><img src="./images/08-09.png" alt="" class="img-responsive thumbnail">
-<h3 class="h5">Taking steps to new design patterns</h3></a>
+
+<a href="#"><h2>Taking steps to new design patterns</h2><img src="./images/08-09.png" alt="" class="img-responsive thumbnail">
+</a>
 <p><small>[2017-08-09]</small> - One of the key aspects of the Canada.ca design is a consistent template for topic pages to help citizens find and start their tasks.</p>
 
 </section>
@@ -290,7 +290,7 @@ ARTICLES GO BELOW
 ////////////////////////////////////////////////////////////////////////////////////////////////
 ------------->
  
-
+<!--
 
 <aside class="gray">
         <div class="container blog"><div class="row">
@@ -370,7 +370,7 @@ ARTICLES GO BELOW
 </div>
 
 
-</main>
+</main> -->
 
 
 <aside class="gc-nttvs container">
