--- a/index3.html
+++ b/index3.html
@@ -285,6 +285,8 @@ ARTICLES GO BELOW
 	</div>
 </div>
 
+</main>
+
 <!---------
 ////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////
