--- a/index3.html
+++ b/index3.html
@@ -278,7 +278,7 @@ ARTICLES GO BELOW
 		<h2>Subscribe</h2>
 		<ul class="list-inline mrgn-tp-lg">
 			<li>
-			<a href="/rss/city/on-118_e.xml"><img src="./images/feed-icon-14x14.png" alt="RSS" class="mrgn-rght-sm">via RSS</a>
+			<a href="/rss/city/on-118_e.xml"><img src="./images/feed-icon-14x14.png" alt="ATOM" class="mrgn-rght-sm">ATOM</a>
 			</li>
 		</ul>
 		</section>
