--- a/indexjk.html
+++ b/indexjk.html
@@ -29,7 +29,7 @@ lang: en
       <h2>Subscribe</h2>
       <ul class="list-inline mrgn-tp-lg">
         <li>
-          <a href="/rss/city/on-118_e.xml"><img src="./images/feed-icon-14x14.png" alt="ATOM" class="mrgn-rght-sm">ATOM</a>
+          <a href="https://canada-ca.github.io/feed.xml"><img src="./images/feed-icon-14x14.png" alt="ATOM" class="mrgn-rght-sm">ATOM</a>
         </li>
       </ul>
     </section>
