Update and rename taches-principales-canada-ca.markdown to taches-principales-canada-ca.html

--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -1,13 +1,4 @@
----
-layout: post
-title:  "Tâches  principales pour Canada.ca"
-gradelevel: x
-ref: template
-date:   2017-09-15 09:48:44 +0100
-categories: category
-published: false
-lang: fr
----
+<h1>Tâches  principales pour Canada.ca</h1>
 
 <table class="wikitable sortable">
 <tr>
