--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -1,14 +1,4 @@
----
-layout: post
-title:  "Top task list for Canada.ca"
-gradelevel: x
-ref: template
-date:   2017-09-15 09:48:44 +0100
-categories: category
-published: false
-lang: en
----
-Version 2.5
+<h1>Top task list for Canada.ca</h1>
 
 <table class="table table-striped wb-tables">
 <thead>
