--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -50,7 +50,7 @@
 <th> Rang </th>
 <th> Tâche </th>
 <th> Institutions </th>
-<th> Visites annuelles qui affichent les pages initiales
+<th> Visites annuelles aux pages qui commencent les tâches
 </th>
 <th> % mobile
 </th>
