--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -50,7 +50,7 @@
 <th scope="col"> Rank </th>
 <th scope="col"> Task </th>
 <th scope="col"> Institution(s) </th>
-<th scope="col"> Annual visits to start pages </th>
+<th scope="col"> Annual visits to page that starts the task </th>
 <th scope="col">&#160;% mobile
 </th>
 </tr>
