--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -45,7 +45,7 @@
 
 <h1>Tâches principales pour Canada.ca</h1>
 
-<table class="table table-striped">
+ <table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }"> 
 <tr>
 <th> Rang </th>
 <th> Tâche </th>
