--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -44,7 +44,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 <h1>Top task list for Canada.ca</h1>
 
-<table class="table table-striped">
+ <table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }"> 
 <thead>
 <tr>
 <th scope="col"> Rank </th>
