Expand RCMP acronym

--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -403,7 +403,7 @@
 <td>-</td></tr>
 <tr>
 <td> 53 </td>
-<td> Check the RCMP wanted list </td>
+<td> Check the Royal Canadian Mounted Police (RCMP) wanted list </td>
 <td> Royal Canadian Mounted Police </td>
 <td> 580,250 </td>
 <td>-</td></tr>
