--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -16,6 +16,17 @@
 			document.write(wet.builder.refTop({
 			}));
 		</script>
+		<!-- Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-105628416-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body vocab="http://schema.org/" typeof="WebPage">
 		<div id="def-top">
@@ -611,7 +622,7 @@
 <td>-</td></tr>
 <tr>
 <td> 87 </td>
-<td> Find out the TFSA contribution limit </td>
+<td> Find out the Tax-Free Savings Account (TFSA) contribution limit </td>
 <td> Canada Revenue Agency </td>
 <td> 235,384 </td>
 <td> 22.7
