--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -193,7 +193,7 @@
 </td></tr>
 <tr>
 <td> 19 </td>
-<td> See the estimated wait times for the Canada-U.S. border </td>
+<td> See the estimated wait times for the Canada-United States border </td>
 <td> Canada Border Services Agency </td>
 <td> 2,889,460 </td>
 <td> 81
@@ -518,7 +518,7 @@
 <td>-</td></tr>
 <tr>
 <td> 70 </td>
-<td> Find my RRSP contribution limit </td>
+<td> Find my Registered Retirement Savings Plan (RRSP) contribution limit </td>
 <td> Canada Revenue Agency </td>
 <td> 325,281 </td>
 <td> 19.5
@@ -550,7 +550,7 @@
 </td></tr>
 <tr>
 <td> 75 </td>
-<td> Access scientific, technical and medical journals* </td>
+<td> Access scientific, technical and medical journals </td>
 <td> National Research Council Canada </td>
 <td> 277579 </td>
 <td>-</td></tr>
