--- a/accueil.html
+++ b/accueil.html
@@ -5,7 +5,7 @@ lang: fr
 ---
 <div class="home">
 
-  <h1 class="page-heading">Newest Articles</h1>
+  <h1 class="page-heading">Nouveaux Articles</h1>
   
  {% assign posts=site.posts | where:"lang", page.lang %}
     {% for post in posts %}
