Add mobile stats from DND

--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -57,15 +57,18 @@
 <h1>Tâches principales pour Canada.ca</h1>
 
  <table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }"> 
+ <thead>
 <tr>
-<th> Rang </th>
-<th> Tâche </th>
-<th> Institutions </th>
-<th> Visites annuelles aux pages qui commencent les tâches
+<th scope="col"> Rang </th>
+<th scope="col"> Tâche </th>
+<th scope="col"> Institutions </th>
+<th scope="col"> Visites annuelles aux pages qui commencent les tâches
 </th>
 <th> % mobile
 </th>
 </tr>
+</thead>
+<tbody>
 <tr>
 <td> 1 </td>
 <td> Obtenir les prévisions météorologiques locales </td>
@@ -208,7 +211,7 @@
 <td> Se joindre aux Forces armées canadiennes </td>
 <td> Défense nationale </td>
 <td> 2 683 703 </td>
-<td>-</td></tr>
+<td>34</td></tr>
 <tr>
 <td> 22 </td>
 <td> Obtenir des renseignements au sujet de maladies </td>
@@ -261,7 +264,7 @@
 <td> Obtenir les taux de rémunération des fonctionnaires et des militaires </td>
 <td> Défense nationale&#160;; Secrétariat du Conseil du Trésor du Canada </td>
 <td> 1 543 014 </td>
-<td> 32.8
+<td> 34
 </td></tr>
 <tr>
 <td> 30 </td>
@@ -662,7 +665,7 @@
 <td> Joindre les cadets </td>
 <td> Défense nationale </td>
 <td> 202 394 </td>
-<td>-</td></tr>
+<td>53</td></tr>
 <tr>
 <td> 94 </td>
 <td> Apprendre au sujet de la participation du Canada aux première et deuxième guerres mondiales </td>
@@ -693,7 +696,7 @@
 <td> Apprendre au sujet des études payées par les Forces armées </td>
 <td> Défense nationale </td>
 <td> 178 530 </td>
-<td>-</td></tr>
+<td>31</td></tr>
 <tr>
 <td> 99 </td>
 <td> Apprendre la date d’expiration des sièges d’auto et rehausseurs </td>
@@ -705,14 +708,14 @@
 <td> Examiner les règlements et les politiques militaires </td>
 <td> Défense nationale </td>
 <td> 168 096 </td>
-<td>-</td></tr></table>
+<td>4.5</td></tr></tbody></table>
 <div id="def-preFooter">
 </div>
 <!-- Write closure template -->
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "2017-10-05",
+		dateModified: "2017-10-12",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
