en title matches fr

--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Top task list for Canada.ca</title>
+		<title>Top tasks for Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
@@ -53,7 +53,7 @@
 			});
 </script>
 <main role="main" property="mainContentOfPage" class="container">
-<h1>Top task list for Canada.ca</h1>
+<h1>Top tasks for Canada.ca</h1>
 
  <table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }"> 
 <thead>
