--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -403,7 +403,7 @@
 <tr>
 <td> 51 </td>
 <td> Access laws and regulations </td>
-<td> Justice Canadatice </td>
+<td> Justice Canada </td>
 <td> 626,967 </td>
 <td>-</td></tr>
 <tr>
