--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -531,183 +531,183 @@
 <td>-</td></tr>
 <tr>
 <td> 72 </td>
-<td> Choose a name for your business </td>
-<td> Innovation, Science and Economic Development Canada </td>
-<td> 306,803 </td>
-<td>-</td></tr>
-<tr>
-<td> 73 </td>
 <td> Learn about the official symbols of Canada </td>
 <td> Canadian Heritage </td>
 <td> 295,926 </td>
 <td>-</td></tr>
 <tr>
-<td> 74 </td>
+<td> 73 </td>
 <td> Apply for old age security </td>
 <td> Employment and Social Development Canada </td>
 <td> 293,730 </td>
 <td>-</td></tr>
 <tr>
-<td> 75 </td>
+<td> 74 </td>
 <td> Find out if you need a visa to travel to a country </td>
 <td> Global Affairs Canada </td>
 <td> 279,258 </td>
 <td> 33
 </td></tr>
 <tr>
-<td> 76 </td>
+<td> 75 </td>
 <td> Access scientific, technical and medical journals </td>
 <td> National Research Council Canada </td>
 <td> 277579 </td>
 <td>-</td></tr>
 <tr>
-<td> 77 </td>
+<td> 76 </td>
 <td> See rules for safe and legal drone use </td>
 <td> Transport Canada </td>
 <td> 276,617 </td>
 <td>-</td></tr>
 <tr>
-<td> 78 </td>
+<td> 77 </td>
 <td> Apply to come to Canada as a refugee </td>
 <td> Immigration, Refugees and Citizenship Canada </td>
 <td> 264,512 </td>
 <td>-</td></tr>
 <tr>
-<td> 79 </td>
+<td> 78 </td>
 <td> Apply for maternity or parental leave benefits </td>
 <td> Employment and Social Development Canada </td>
 <td> 262,069 </td>
 <td>-</td></tr>
 <tr>
-<td> 80 </td>
+<td> 79 </td>
 <td> File a trademark </td>
 <td> Innovation, Science and Economic Development Canada </td>
 <td> 260,189 </td>
 <td>7.2</td></tr>
 <tr>
-<td> 81 </td>
+<td> 80 </td>
 <td> Sponsor a refugee to come to Canada </td>
 <td> Immigration, Refugees and Citizenship Canada </td>
 <td> 259,795 </td>
 <td>-</td></tr>
 <tr>
-<td> 82 </td>
+<td> 81 </td>
 <td> Find out what drugs are covered by the Non-Insured Health Benefits program </td>
 <td> Health Canada </td>
 <td> 250,000 </td>
 <td>-</td></tr>
 <tr>
-<td> 83 </td>
+<td> 82 </td>
 <td> Research family history </td>
 <td> Library and Archives Canada </td>
 <td> 245,964 </td>
 <td>-</td></tr>
 <tr>
-<td> 84 </td>
+<td> 83 </td>
 <td> Apply for Indian Status </td>
 <td> Immigration, Indigenous and Northern Affairs Canada </td>
 <td> 242,928 </td>
 <td>-</td></tr>
 <tr>
-<td> 85 </td>
+<td> 84 </td>
 <td> Access a Canadian census (from before 1921) </td>
 <td> Library and Archives Canada </td>
 <td> 240,522 </td>
 <td>-</td></tr>
 <tr>
-<td> 86 </td>
+<td> 85 </td>
 <td> Apply for or renew a Pleasure Craft Operators (boating) Licence </td>
 <td> Transport Canada </td>
 <td> 238,137 </td>
 <td>-</td></tr>
 <tr>
-<td> 87 </td>
+<td> 86 </td>
 <td> Learn how to hire a foreign worker </td>
 <td> Immigration, Refugees and Citizenship Canada </td>
 <td> 237,447 </td>
 <td>-</td></tr>
 <tr>
-<td> 88 </td>
+<td> 87 </td>
 <td> Find out the Tax-Free Savings Account (TFSA) contribution limit </td>
 <td> Canada Revenue Agency </td>
 <td> 235,384 </td>
 <td> 22.7
 </td></tr>
 <tr>
-<td> 89 </td>
+<td> 88 </td>
 <td> Apply for sickness Employment Insurance benefits </td>
 <td> Employment and Social Development Canada </td>
 <td> 232,227 </td>
 <td>-</td></tr>
 <tr>
-<td> 90 </td>
+<td> 89 </td>
 <td> Find requests to supply goods or services to the government (tenders) </td>
 <td> Public Services and Procurement Canada </td>
 <td> 231,696 </td>
 <td> 10
 </td></tr>
 <tr>
-<td> 91 </td>
+<td> 90 </td>
 <td> File for commercial bankruptcy </td>
 <td> Innovation, Science and Economic Development Canada </td>
 <td> 224,020 </td>
 <td>-</td></tr>
 <tr>
-<td> 92 </td>
+<td> 91 </td>
 <td> See wildland fire danger zones and forecasts </td>
 <td> Natural Resources Canada </td>
 <td> 217386 </td>
 <td>-</td></tr>
 <tr>
-<td> 93 </td>
+<td> 92 </td>
 <td> Learn about First Nations in Canada </td>
 <td> Immigration, Indigenous and Northern Affairs Canada </td>
 <td> 213,292 </td>
 <td>-</td></tr>
 <tr>
-<td> 94 </td>
+<td> 93 </td>
 <td> Join the Cadets </td>
 <td> Department of National Defence </td>
 <td> 202,394 </td>
 <td>53</td></tr>
 <tr>
-<td> 95 </td>
+<td> 94 </td>
 <td> Learn about Canadian involvement in the First and Second World War </td>
 <td> Veterans Affairs Canada </td>
 <td> 201,531 </td>
 <td>-</td></tr>
 <tr>
-<td> 96 </td>
+<td> 95 </td>
 <td> Authenticate an official document </td>
 <td> Global Affairs Canada </td>
 <td> 193,986 </td>
 <td> 32.4
 </td></tr>
 <tr>
-<td> 97 </td>
+<td> 96 </td>
 <td> Learn how to install and use car seats and booster seats </td>
 <td> Transport Canada </td>
 <td> 190,212 </td>
 <td>-</td></tr>
 <tr>
-<td> 98 </td>
+<td> 97 </td>
 <td> See tax treaty negotiation status with other countries </td>
 <td> Finance Canada </td>
 <td> 186,187 </td>
 <td>-</td></tr>
 <tr>
-<td> 99 </td>
+<td> 98 </td>
 <td> Find out about paid education from the Armed Forces </td>
 <td> Department of National Defence </td>
 <td> 178,530 </td>
 <td>31</td></tr>
 <tr>
-<td> 100 </td>
+<td> 99 </td>
 <td> Learn when car and booster seats expire </td>
 <td> Transport Canada </td>
 <td> 172,178 </td>
 <td>-</td></tr>
-</tbody></table>
+<tr>
+<td> 100 </td>
+<td> Review military regulations and policies </td>
+<td> Department of National Defence </td>
+<td> 168,096 </td>
+<td>4.5</td>
+</tr></tbody></table>
 <div id="def-preFooter">
 </div>
 <!-- Write closure template -->
