--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -533,183 +533,182 @@
 <td>-</td></tr>
 <tr>
 <td> 72 </td>
-<td> Choisissez un nom pour votre entreprise  </td>
-<td> Innovation, Sciences et Développement économique Canada </td>
-<td> 306 803 </td>
-<td>-</td></tr>
-<tr>
-<td> 73 </td>
 <td> Apprendre au sujet des symboles officiels du Canada </td>
 <td> Patrimoine canadien </td>
 <td> 295 926 </td>
 <td>-</td></tr>
 <tr>
-<td> 74 </td>
+<td> 73 </td>
 <td> S’inscrire à la Sécurité de la vieillesse </td>
 <td> Emploi et Développement social Canada </td>
 <td> 293 730 </td>
 <td>-</td></tr>
 <tr>
-<td> 75 </td>
+<td> 74 </td>
 <td> Déterminer s’il faut un visa pour voyager vers un pays </td>
 <td> Affaires mondiales Canada </td>
 <td> 279 258 </td>
 <td> 33
 </td></tr>
 <tr>
-<td> 76 </td>
+<td> 75 </td>
 <td> Consulter les journaux scientifiques, techniques et médicaux </td>
 <td> Conseil national de recherches Canada </td>
 <td> 277579 </td>
 <td>-</td></tr>
 <tr>
-<td> 77 </td>
+<td> 76 </td>
 <td> Voir les règles pour une utilisation sécuritaire et légale des drones </td>
 <td> Transports Canada </td>
 <td> 276 617 </td>
 <td>-</td></tr>
 <tr>
-<td> 78 </td>
+<td> 77 </td>
 <td> Demander de venir au Canada en tant que réfugié </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 264 512 </td>
 <td>-</td></tr>
 <tr>
-<td> 79 </td>
+<td> 78 </td>
 <td> Demander les prestations de congé de maternité ou parental </td>
 <td> Emploi et Développement social Canada </td>
 <td> 262 069 </td>
 <td>-</td></tr>
 <tr>
-<td> 80 </td>
+<td> 79 </td>
 <td> Enregistrer une marquer de commerce </td>
 <td> Innovation, Sciences et Développement économique Canada </td>
 <td> 260 189 </td>
 <td>7,2</td></tr>
 <tr>
-<td> 81 </td>
+<td> 80 </td>
 <td> Parrainer l’arrivée d’un réfugié au Canada </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 259 795 </td>
 <td>-</td></tr>
 <tr>
-<td> 82 </td>
+<td> 81 </td>
 <td> Trouver les médicaments qui sont couverts par le programme de Services de santé non assurés </td>
 <td> Santé Canada </td>
 <td> 250 000 </td>
 <td>-</td></tr>
 <tr>
-<td> 83 </td>
+<td> 82 </td>
 <td> Rechercher son histoire familiale </td>
 <td> Bibliothèque et Archives Canada </td>
 <td> 245964 </td>
 <td>-</td></tr>
 <tr>
-<td> 84 </td>
+<td> 83 </td>
 <td> Demander le statut d’indien </td>
 <td> Affaires autochtones et du Nord Canada </td>
 <td> 242 928 </td>
 <td>-</td></tr>
 <tr>
-<td> 85 </td>
+<td> 84 </td>
 <td> Consulter un recensement canadien (d’avant 1921) </td>
 <td> Bibliothèque et Archives Canada </td>
 <td> 240522 </td>
 <td>-</td></tr>
 <tr>
-<td> 86 </td>
+<td> 85 </td>
 <td> Demander ou renouveler un permis de conducteur d’embarcation de plaisance (navigation de plaisance) </td>
 <td> Transports Canada </td>
 <td> 238 137 </td>
 <td>-</td></tr>
 <tr>
-<td> 87 </td>
+<td> 86 </td>
 <td> Apprendre comment embaucher un travailleur étranger </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 237 447 </td>
 <td>-</td></tr>
 <tr>
-<td> 88 </td>
+<td> 87 </td>
 <td> Déterminer sa limite de cotisation à un compte d’épargne libre d’impôt (CELI) </td>
 <td> Agence du revenu du Canada </td>
 <td> 235 384 </td>
 <td> 22,7
 </td></tr>
 <tr>
-<td> 89 </td>
+<td> 88 </td>
 <td> Demander les prestations de maladie de l’assurance-emploi </td>
 <td> Emploi et Développement social Canada </td>
 <td> 232 227 </td>
 <td>-</td></tr>
 <tr>
-<td> 90 </td>
+<td> 89 </td>
 <td> Trouver les demandes d’approvisionnement de produits ou de services au gouvernement (appels d’offres) </td>
 <td> Services publics et Approvisionnement Canada </td>
 <td> 231696 </td>
 <td> 10
 </td></tr>
 <tr>
-<td> 91 </td>
+<td> 90 </td>
 <td> Déclarer une faillite commerciale </td>
 <td> Innovation, Sciences et Développement économique Canada </td>
 <td> 224 020 </td>
 <td>-</td></tr>
 <tr>
-<td> 92 </td>
+<td> 91 </td>
 <td> Voir les zones de danger et les prévisions de feux de végétation </td>
 <td> Ressources naturelles Canada </td>
 <td> 217386 </td>
 <td>-</td></tr>
 <tr>
-<td> 93 </td>
+<td> 92 </td>
 <td> Apprendre au sujet des Premières Nations au Canada </td>
 <td> Affaires autochtones et du Nord Canada </td>
 <td> 213 292 </td>
 <td>-</td></tr>
 <tr>
-<td> 94 </td>
+<td> 93 </td>
 <td> Joindre les cadets </td>
 <td> Défense nationale </td>
 <td> 202 394 </td>
 <td>53</td></tr>
 <tr>
-<td> 95 </td>
+<td> 94 </td>
 <td> Apprendre au sujet de la participation du Canada aux première et deuxième guerres mondiales </td>
 <td> Anciens Combattants Canada </td>
 <td> 201 531 </td>
 <td>-</td></tr>
 <tr>
-<td> 96 </td>
+<td> 95 </td>
 <td> Authentifier un document officiel </td>
 <td> Affaires mondiales Canada </td>
 <td> 193 986 </td>
 <td> 32,4
 </td></tr>
 <tr>
-<td> 97 </td>
+<td> 96 </td>
 <td> Apprendre à installer et utiliser les sièges d’auto et les sièges rehausseurs </td>
 <td> Transports Canada </td>
 <td> 190 212 </td>
 <td>-</td></tr>
 <tr>
-<td> 98 </td>
+<td> 97 </td>
 <td> Voir l’état des négociations de conventions fiscales avec d’autres pays </td>
 <td> Finances Canada, Ministère des </td>
 <td> 186 187 </td>
 <td>-</td></tr>
 <tr>
-<td> 99 </td>
+<td> 98 </td>
 <td> Apprendre au sujet des études payées par les Forces armées </td>
 <td> Défense nationale </td>
 <td> 178 530 </td>
 <td>31</td></tr>
 <tr>
-<td> 100 </td>
+<td> 99 </td>
 <td> Apprendre la date d’expiration des sièges d’auto et rehausseurs </td>
 <td> Transports Canada </td>
 <td> 172 178 </td>
 <td>-</td></tr>
-</tbody></table>
+<tr>
+<td> 100 </td>
+<td> Examiner les règlements et les politiques militaires </td>
+<td> Défense nationale </td>
+<td> 168 096 </td>
+<td>4,5</td></tr></tbody></table>
 <div id="def-preFooter">
 </div>
 <!-- Write closure template -->
