--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -599,7 +599,7 @@
 <tr>
 <td> 83 </td>
 <td> Apply for Indian Status </td>
-<td> Immigration, Indigenous and Northern Affairs Canada </td>
+<td> Indigenous and Northern Affairs Canada </td>
 <td> 242,928 </td>
 <td>-</td></tr>
 <tr>
@@ -655,7 +655,7 @@
 <tr>
 <td> 92 </td>
 <td> Learn about First Nations in Canada </td>
-<td> Immigration, Indigenous and Northern Affairs Canada </td>
+<td> Indigenous and Northern Affairs Canada </td>
 <td> 213,292 </td>
 <td>-</td></tr>
 <tr>
