--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -240,7 +240,7 @@
 <tr>
 <td> 26 </td>
 <td> Find information about a company </td>
-<td> Innovation Science and Economic Development Canada </td>
+<td> Innovation, Science and Economic Development Canada </td>
 <td> 1,881,200 </td>
 <td>8.8</td></tr>
 <tr>
